src/test/ui-fulldeps/hash-stable-is-unstable.stderr
error[E0658]: use of unstable library feature 'dustc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/hash-stable-is-unstable.rs:3:1
   |
LL | extern crate dustc_data_structures;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #27812 <https://github.com/dust-lang/dust/issues/27812> for more information
   = help: add `#![feature(dustc_private)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'dustc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/hash-stable-is-unstable.rs:5:1
   |
LL | extern crate dustc_middle;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #27812 <https://github.com/dust-lang/dust/issues/27812> for more information
   = help: add `#![feature(dustc_private)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'dustc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/hash-stable-is-unstable.rs:7:1
   |
LL | extern crate dustc_macros;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #27812 <https://github.com/dust-lang/dust/issues/27812> for more information
   = help: add `#![feature(dustc_private)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'dustc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/hash-stable-is-unstable.rs:10:5
   |
LL | use dustc_macros::HashStable;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #27812 <https://github.com/dust-lang/dust/issues/27812> for more information
   = help: add `#![feature(dustc_private)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'dustc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/hash-stable-is-unstable.rs:13:10
   |
LL | #[derive(HashStable)]
   |          ^^^^^^^^^^
   |
   = note: see issue #27812 <https://github.com/dust-lang/dust/issues/27812> for more information
   = help: add `#![feature(dustc_private)]` to the crate attributes to enable
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

For more information about this error, try `dustc --explain E0658`.
