src/test/ui-fulldeps/hash-stable-is-unstable.ds
// ignore-stage1

extern crate dustc_data_structures;
//~^ use of unstable library feature 'dustc_private'
extern crate dustc_middle;
//~^ use of unstable library feature 'dustc_private'
extern crate dustc_macros;
//~^ use of unstable library feature 'dustc_private'

use dustc_macros::HashStable;
//~^ use of unstable library feature 'dustc_private'

#[derive(HashStable)]
//~^ use of unstable library feature 'dustc_private'
struct Test;

fn main() {}
